# Agentic_Design_Patterns

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
01_Prompt_Chaining/: prompt_chaining_basics.py  prompt_chaining_json_example.py
02_Routing/: adk_routing_example.py  langgraph_coordinator_routing.py  langgraph_routing_example.py  openrouter_example.py
03_Parallelization/: adk_parallel_research.py  langchain_parallel_processing.py  langgraph_parallel_research.py
04_Reflection/: adk_reflection_pipeline.py  langchain_reflection_basics.py  langchain_reflection_loop.py  langgraph_reflection_pipeline.py
05_Tool_Use/: adk_code_execution.py  adk_google_search_agent.py  adk_vertex_search.py  crewai_stock_tool.py  langchain_code_execution.py  langchain_search_agent.py  langchain_stock_tool.py  langchain_tool_calling.py
06_Planning/: crewai_planning_writer.py  google_deep_research.py  langchain_deep_research.py  langchain_planning_writer.py
07_Multi_Agent/: adk_agent_as_tool.py  adk_custom_agent_coordinator.py  adk_loop_agent.py  adk_parallel_agent.py  adk_sequential_agent.py  crewai_multi_agent_blog.py  langgraph_agent_as_tool.py  langgraph_coordinator.py  langgraph_loop_agent.py  langgraph_multi_agent_blog.py  langgraph_parallel_agents.py  langgraph_sequential_pipeline.py
08_Memory_Management/: adk_agent_output_key.py  adk_memory_services.py  adk_session_services.py  adk_state_update_tool.py  langchain_memory_basics.py  langgraph_memory_persistence.py  langgraph_state_management.py
09_Learning_and_Adaptation/: langgraph_adaptive_agent.py  (+1 more)
(+38 files in other folders)
