[project]
name = "agentic-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "google-adk>=1.22.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "weaviate-client>=4.19.2",
]
