[project]
name = "agentic-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "weaviate-client>=4.19.2",
]
